--- a/rainyHillsWeb/src/main/webapp/add.xhtml
+++ b/rainyHillsWeb/src/main/webapp/add.xhtml
@@ -11,6 +11,7 @@
                 <p:inputText value="#{addBean.surface.name}" />
 
                 <h3>Surface</h3>
+                <h5>Please, add surface profile as sequence of numbers separated with spaces</h5>
                 <p:inputTextarea id="surfaceConfig" rows="6" cols="33" value="#{addBean.surface.profile}"
                                  converter="spaceSeparatedListOfLongsConverter" />
                 <p:commandButton value="Submit" action="#{addBean.submit}" />
